--- a/configurations/.tmux.conf
+++ b/configurations/.tmux.conf
@@ -1,1 +1,12 @@
-/home/superuser/.tmux.conf
+# Set the control character to Ctrl+b
+set -g prefix C-b
+unbind-key C-space
+bind-key C-b send-prefix
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# kill pane without pressing y
+bind x kill-pane
